<resources>
    <string name="app_name">Playlist Market</string>
    <string name="menubuttonText1">Поиск</string>
    <string name="menubuttonText2">Медиатека</string>
    <string name="menubuttonText3">Настройки</string>
    <string name="settingName">Настройки</string>
    <string name="settingbuttonText1">Тёмная тема</string>
    <string name="settingbuttonText2">Поделится приложением</string>
    <string name="settingbuttonText3">Написать в поддержку</string>
    <string name="settingbuttonText4">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>