<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonBackMain"
            style="@style/КнопкиМенюНастроекГланая"
            android:text="@string/setting"

            app:icon="@drawable/baseline_arrow_back_24"
            app:iconTint="@color/buttonMainText"
            app:iconGravity="textStart"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="@dimen/paddingSettingMenu">
            <Button
                android:id="@+id/buttonStyle"
                style="@style/КнопкиМенюНастроек"
                android:text="@string/settingbuttonText1"

                app:icon="@drawable/baseline_toggle_on_24"
                app:iconTint="@color/buttonMainText"
                app:iconGravity="end"
                />
            <Button
                android:id="@+id/buttonShare"
                style="@style/КнопкиМенюНастроек"
                android:text="@string/settingbuttonText2"

                app:icon="@drawable/baseline_share_24"
                app:iconTint="@color/buttonMainText"
                app:iconGravity="end"
                />
            <Button
                android:id="@+id/buttonHelper"
                style="@style/КнопкиМенюНастроек"
                android:text="@string/settingbuttonText3"

                app:icon="@drawable/baseline_headset_mic_24"
                app:iconTint="@color/buttonMainText"
                app:iconGravity="end"
                />
            <Button
                android:id="@+id/buttonUserText"
                style="@style/КнопкиМенюНастроек"
                android:text="@string/settingbuttonText4"

                app:icon="@drawable/baseline_arrow_forward_ios_24"
                app:iconTint="@color/buttonMainText"
                app:iconGravity="end"
                />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>