<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mainBackground">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/layoutMarginHorizontalMenu"
            android:text="@string/app_name"
            android:textColor="@color/mainBackgroundText"
            android:textSize="@dimen/textSizeMenu"
            android:gravity="start|center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/layoutMarginHorizontalMenu"

            >

            <Button
                android:id="@+id/buttonSearch"
                style="@style/КнопкиГлавногоМеню"
                android:text="@string/menubuttonText1"

                app:cornerRadius="@dimen/cornerRadiusMenuButton"
                app:icon="@drawable/baseline_search_24"
                app:iconTint="@color/buttonMainText"
                app:iconSize="@dimen/iconSize"
                app:iconGravity="textStart"
                />

            <Button
                android:id="@+id/buttonMedia"
                style="@style/КнопкиГлавногоМеню"
                android:text="@string/menubuttonText2"


                app:cornerRadius="@dimen/cornerRadiusMenuButton"
                app:icon="@drawable/baseline_library_music_24"
                app:iconTint="@color/buttonMainText"
                app:iconSize="@dimen/iconSize"
                app:iconGravity="textStart"
                />

            <Button
                android:id="@+id/buttonSetting"
                style="@style/КнопкиГлавногоМеню"
                android:text="@string/setting"

                app:cornerRadius="@dimen/cornerRadiusMenuButton"
                app:icon="@drawable/baseline_build_24"
                app:iconTint="@color/buttonMainText"
                app:iconSize="@dimen/iconSize"
                app:iconGravity="textStart"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>